# mcp-legal-it

./: .dockerignore  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  install.py  pyproject.toml  release.py  requirements.txt  run_server.py  setup.py  src
.claude/: settings.json
.claude-plugin/: marketplace.json
.github/: pull_request_template.md
docs/: README.md  architecture.md  architettura.md  data-files.md  deployment.md  lib-reference.md  plugin.md  prompts-resources.md  strumenti.md  testing.md  tools-catalog.md
dxt/: .mcpbignore  manifest.json  start_server.sh
plugin/: .mcp.dist.json  .mcp.json  (+6 more)
plugin/server/: .mcpbignore  manifest.json  pyproject.toml  run_server.py
plugin/server/src/: prompts.py  resources.py  server.py
plugin/server/src/data/: codici_ruolo.json  codici_tributo.json  debug_pignoramento.py  festivita.json  gdpr_basi_giuridiche.json  gdpr_dpia_criteri.json  gdpr_sanzioni.json  imposte_successione.json  indici_foi.json  irpef_scaglioni.json  mediazione_obbligatoria.json  modelli_atti.json  parametri_forensi.json  preavviso_ccnl.json  tabella_danno_bio.json  tabella_milano_roma.json  tassi_legali.json  tassi_mora.json  tegm.json  violazioni_patente.json
plugin/server/src/lib/: _http.py  _result.py
plugin/server/src/lib/brocardi/: __init__.py
plugin/server/src/lib/cerdef/: __init__.py  client.py
plugin/server/src/lib/cgue/: __init__.py  client.py
plugin/server/src/lib/consob/: client.py
plugin/server/src/lib/giustizia_amm/: __init__.py  client.py
plugin/server/src/lib/gpdp/: __init__.py
plugin/server/src/lib/italgiure/: __init__.py  client.py
plugin/server/src/lib/visualex/: __init__.py  models.py  scraper.py
plugin/server/src/tools/: atti_giudiziari.py  cerdef.py  cgue.py  consob.py  crisi_impresa.py  dichiarazione_redditi.py  diritto_lavoro.py  diritto_penale.py  diritto_societario.py  fatturazione_avvocati.py  giurisprudenza_unificata.py  giustizia_amm.py  gpdp.py  italgiure.py  legal_citations.py  modelli_atti.py  privacy_gdpr.py  procedura_civile.py  proprieta_successioni.py  scadenze_termini.py  tassi_interessi.py
(+158 files in other folders)
