[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mcp-legal-it"
version = "2.0.0"
description = "MCP server with 166 Italian legal tools: calculations, legislation, case law, CONSOB, GDPR, document generation"
license = {text = "Apache-2.0"}
requires-python = ">=3.10"
dependencies = [
    "fastmcp>=2.0.0",
    "httpx>=0.27",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "fpdf2>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "playwright>=1.40",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
